--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
 	"main": "index.js",
 	"scripts": {
 		"types": "npx -p typescript tsc index.js --declaration --allowJs --emitDeclarationOnly --outDir .",
-		"test": "ava"
+		"test": "xo --prettier && ava"
 	},
 	"license": "MIT",
 	"dependencies": {
 		"@peculiar/webcrypto": "^1.1.7",
 		"object-path": "^0.11.5",
 		"plugin-error": "^1.0.1",
-		"through2": "^4.0.2",
-		"vinyl": "^2.2.1"
+		"through2": "^4.0.2"
 	},
 	"devDependencies": {
 		"@types/vinyl": "^2.0.5",
-		"ava": "^3.15.0"
+		"ava": "^3.15.0",
+		"vinyl": "^2.2.1",
+		"xo": "^0.39.1"
 	}
 }
