--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
 	"main": "index.js",
 	"scripts": {
 		"types": "npx -p typescript tsc index.js --declaration --allowJs --emitDeclarationOnly --outDir .",
-		"test": "xo --prettier && ava"
+		"test": "xo --prettier && ava --verbose"
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@peculiar/webcrypto": "^1.1.7",
 		"object-path": "^0.11.5",
-		"plugin-error": "^1.0.1",
 		"through2": "^4.0.2"
 	},
 	"devDependencies": {
